--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,7 @@ ul {
   --white: #ffffff;
   --dairy: #fcfcfc;
 }
+
 .conteiner {
   width: 1158px;
   padding-left: 15px;
@@ -89,18 +90,52 @@ body {
 /** -------------HEADER---------------- */
 
 .header-logo {
+  display: inline-block;
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
   color: var(--iris);
-  /* align-items: center; */
+  
   letter-spacing: 0.03em;
   text-transform: uppercase;
   padding-top: 24px;
+  padding-bottom: 24px;
+
 }
 .header-logo-studio {
   color: var(--navybluemodal);
+}
+/**------------------------Block model------------ */
+.header-navi{
+  display: inline-block;
+  margin: 0;
+}
+.header-bar{
+  display: inline-block;
+  margin: 0;
+  padding-left: 76px;
+
+}
+.header-link-item{
+  display: inline-block;
+  padding-left: 40px;
+
+}
+.header-address{
+  display: inline-block;
+ }
+
+.header-address-list{
+display: inline-block;
+  margin: 0;
+  padding-left: 230px;
+
+}
+.header-address-item{
+ display: inline-block;
+ padding-right: 40px;
+
 }
 
 .header-link {
