--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ color:var(--slate);background-color: var(--white);}
     width: 1158px;
     padding: 0 15px;
     margin: 0 auto;
-    outline: 1px solid red;
+    border-bottom: 1px solid var(--cornflower);
   }
   .header-navi{
     display: flex;
@@ -56,6 +56,7 @@ color:var(--slate);background-color: var(--white);}
   align-items: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  margin-right: 76px;
 }
 .header-logo-studio {
   color:var(--navybluemodal);
@@ -63,9 +64,9 @@ color:var(--slate);background-color: var(--white);}
 .header-bar{
 display: flex;
 align-items: center;
-margin-left: 76px;
-margin-top: 24px;
-margin-bottom: 24px;
+/* margin-left: 76px; */
+/* margin-top: 24px;
+margin-bottom: 24px; */
 
 padding: 0;
 gap: 40px;
@@ -89,7 +90,7 @@ gap: 40px;
 }
 .header-address-list{
   display: flex;
-  padding: 0;
+  padding: 24px 0 ;
   gap: 40px;
 }
 
