--- a/css/styles.css
+++ b/css/styles.css
@@ -113,6 +113,7 @@ gap: 40px;
 .hero {
   height: 600px;
   background-color:var(--navybluemodal);
+  padding: 188px 0;
 }
 .hero-cntr{
   display: flex;
@@ -120,7 +121,7 @@ gap: 40px;
   padding: 0 15px;
   margin: 0 auto;
   flex-direction: column;
-  outline: 1px solid red;
+  /* outline: 1px solid red; */
 
 }
 .hero-title {
@@ -131,7 +132,7 @@ gap: 40px;
   text-align: center;
   letter-spacing: 0.02em;
   color:var(--white);
-  width: 496px;
+  max-width: 496px;
   height: 120px;
   margin-left: 316px;
   margin-top: 188px;
@@ -146,14 +147,15 @@ gap: 40px;
   letter-spacing: 0.04em;
   color:var(--white);
   cursor: pointer;
+  border: 0;
   background:var(--iris);
-  width: 169px;
+  min-width: 169px;
   height: 56px;
   border-radius: 4px;
   margin-top: 48px;
   margin-left: 480px;
   margin-right: 480px;
-  margin-bottom: 188px;
+  /* margin-bottom: 188px; */
 }
 
 
