--- a/css/styles.css
+++ b/css/styles.css
@@ -210,7 +210,7 @@ gap: 40px;
   width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
-  outline: 1px solid red;
+  /* outline: 1px solid red; */
   flex-direction: column;
 
 }
