--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 h1,h2,h3,h4,h5,h6,p,il,ol{
   margin: 0;
 }
-img{
+img {
   display: block;
 }
 
@@ -349,6 +349,15 @@ max-width: 264px;
 .ourworks {
   padding: 96px 0 120px; 
 }
+.ourworks .container{
+  display: flex;
+  width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+  /* outline: 1px solid red; */
+  flex-direction: column;
+} 
+
 .filter-list {
   display: flex;
   justify-content: center;
@@ -372,15 +381,6 @@ max-width: 264px;
 
 /* *------------Prtfolio Works IMG-h3-Text------------ */
 
-.ourworks .container{
-  display: flex;
-  width: 1158px;
-  padding: 0 15px;
-  margin: 0 auto;
-  /* outline: 1px solid red; */
-  flex-direction: column;
-
-}
 
 
 .works-list {
@@ -388,11 +388,13 @@ max-width: 264px;
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
+  padding: 0;
+  margin: 0;
 
 }
 
 .works-list-item {
-  width: calc((100%-48px)/3);
+  width: calc((100% - 48px)/3);
 
 }
 .workdiscript{
@@ -407,6 +409,7 @@ max-width: 264px;
 .link {
 }
 .works-list-title {
+  margin-bottom: 8px;
 }
 .works-list-text {
 }
