--- a/css/styles.css
+++ b/css/styles.css
@@ -1,155 +1,176 @@
-h1,h2,h3,h4,h5,h6,p,il,ol{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+il,
+ol {
   margin: 0;
 }
 img {
   display: block;
 }
 
-
-:root
-{
- --ocean:#404BBF;--iris:#4D5AE5;--navyblue:#2F2F42;
- --green:#31D0AA;--slate:#434455;--lightslate:#8E8F99;
- --cornflower:#E7E9FC;--cloud:#F4F4FD;--navybluemodal:#2E2F42;
- --grey:#808080;--white:#FFFFFF;--dairy:#FCFCFC;
+:root {
+  --ocean: #404bbf;
+  --iris: #4d5ae5;
+  --navyblue: #2f2f42;
+  --green: #31d0aa;
+  --slate: #434455;
+  --lightslate: #8e8f99;
+  --cornflower: #e7e9fc;
+  --cloud: #f4f4fd;
+  --navybluemodal: #2e2f42;
+  --grey: #808080;
+  --white: #ffffff;
+  --dairy: #fcfcfc;
 }
 
+.link {
+  text-decoration: none;
+}
+.list {
+  list-style: none;
+}
+.filter-btn:is(:hover, :focus) {
+  background-color: var(--ocean);
+  color: var(--white);
+}
 
-.link{text-decoration: none;}
-.list{list-style: none;}
-.filter-btn:is(:hover,:focus){background-color:var(--ocean);color:var(--white);}
+.hero-btn:hover {
+  background-color: var(--ocean);
+}
+.hero-btn:focus {
+  background-color: var(--ocean);
+}
+.header-link:hover {
+  color: var(--ocean);
+}
+.header-link:focus {
+  color: var(--ocean);
+}
+.header-address:hover {
+  color: var(--ocean);
+}
+.header-address:focus {
+  color: var(--ocean);
+}
+.filter-btn:hover {
+  border: 1px solid transparent;
+}
+.filter-btn:focus {
+  border: 1px solid transparent;
+}
 
+body {
+  font-family: "Roboto", sans-serif;
+  color: var(--slate);
+  background-color: var(--white);
+}
 
-.hero-btn:hover{background-color:var(--ocean);} 
-.hero-btn:focus{background-color:var(--ocean);}
-.header-link:hover{color:var(--ocean);} 
-.header-link:focus{color:var(--ocean);} 
-.header-address:hover {color:var(--ocean);} 
-.header-address:focus {color:var(--ocean);}
- .filter-btn:hover{border: 1px solid transparent ;}
- .filter-btn:focus{border: 1px solid transparent ;}
-
-
-body { 
-font-family:"Roboto",sans-serif; 
-color:var(--slate);background-color: var(--white);}
-
-  /** -------------HEADER---------------- */
-  .header{
-    border-bottom: 1px solid var(--cornflower) 
-  }
-  .header .container{
-    display: flex;
-    align-items: center;
-    width: 1158px;
-    padding: 0 15px;
-    margin: 0 auto;
-    /* border-bottom: 1px solid var(--cornflower); */
-  }
-  .header-navi{
-    display: flex;
-    align-items: center;
-   
-  }
+/** -------------HEADER---------------- */
+.header {
+  border-bottom: 1px solid var(--cornflower);
+}
+.header .container {
+  display: flex;
+  align-items: center;
+  width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+.header-navi {
+  display: flex;
+  align-items: center;
+}
 
 .header-logo {
-  font-family: "Raleway",sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
-  color:var(--iris);
+  color: var(--iris);
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-right: 76px;
 }
 .header-logo-studio {
-  color:var(--navybluemodal);
+  color: var(--navybluemodal);
 }
-.header-bar{
-display: flex;
-align-items: center;
-/* margin-left: 76px; */
-/* margin-top: 24px;
-margin-bottom: 24px; */
-
-padding: 0;
-gap: 40px;
-  
+.header-bar {
+  display: flex;
+  align-items: center;
+  padding: 0;
+  gap: 40px;
 }
 
 .header-link {
-  font-family:"Roboto",sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color:var(--navybluemodal);
+  color: var(--navybluemodal);
   padding: 24px 0;
-  
 }
-.header-adrs{
+.header-adrs {
   display: flex;
   align-items: center;
   margin-left: 332px;
-  
 }
-.header-address-list{
+.header-address-list {
   display: flex;
-  padding: 0 ;
+  padding: 0;
   gap: 40px;
 }
 
-.header-address{
+.header-address {
   font-style: normal;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color:var(--slate);
-  
+  color: var(--slate);
 }
-
-
 
 /** -------------HERO---------------- */
 .hero {
   height: 600px;
-  background-color:var(--navybluemodal);
-  padding: 188px 0; 
+  background-color: var(--navybluemodal);
+  padding: 188px 0;
 }
-.hero .container{
+.hero .container {
   display: flex;
   width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
   flex-direction: column;
-  /* outline: 1px solid red; */
-
 }
 .hero-title {
-  font-family: "Roboto",sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
   text-align: center;
   letter-spacing: 0.02em;
-  color:var(--white);
+  color: var(--white);
   max-width: 496px;
   height: 120px;
   margin-left: 316px;
-  /* margin-top: 188px; */
   margin-right: 316px;
 }
 .hero-btn {
-  font-family: "Roboto",sans-serif;
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.5; 
+  line-height: 1.5;
   letter-spacing: 0.04em;
-  color:var(--white);
+  color: var(--white);
   cursor: pointer;
   border: 0;
-  background:var(--iris);
+  background: var(--iris);
   min-width: 169px;
   height: 56px;
   border-radius: 4px;
@@ -158,39 +179,33 @@ gap: 40px;
   margin-right: 480px;
   margin-bottom: 188px;
 }
-
-
 /** -------------FEATURES---------------- */
 
-.features{
-  padding: 120px 0; 
+.features {
+  padding: 120px 0;
 }
-
-.features .container{
+.features .container {
   display: flex;
   width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
-  /* outline: 1px solid red; */
 }
-.features-list{
+.features-list {
   display: flex;
   padding: 0;
   margin: 0;
   gap: 24px;
 }
-/**--------fix------- */
-.features-list-item{
-  flex-basis: calc((100% - 3 * 24px) / 4) ;
+.features-list-item {
+  flex-basis: calc((100% - 3 * 24px) / 4);
 }
-
 .features-list-title {
-  font-family: "Roboto",sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color:var(--navybluemodal);
+  color: var(--navybluemodal);
   margin-bottom: 8px;
 }
 .features-list-text {
@@ -199,25 +214,24 @@ gap: 40px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color:var(--slate);
+  color: var(--slate);
 }
 
 /** -------------OURJOB---------------- */
-.ourjob{
+.ourjob {
   padding-bottom: 120px;
 }
-.ourjob .container{
+.ourjob .container {
   display: flex;
   width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
-  /* outline: 1px solid red; */
-  flex-direction: column;
 
+  flex-direction: column;
 }
 
 .ourjob-title {
-  font-family: "Roboto",sans-serif;
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 36px;
@@ -225,138 +239,136 @@ gap: 40px;
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  color:var(--navybluemodal);
+  color: var(--navybluemodal);
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 72px;
 }
-.ourjob-list{
+.ourjob-list {
   display: flex;
   padding: 0;
   margin: 0;
-  justify-content:space-between ;
+  justify-content: space-between;
   gap: 24px;
 }
 
 /** -------------OURTEAM---------------- */
-.ourteam{background-color: var(--cloud);
- 
+.ourteam {
+  background-color: var(--cloud);
+
   padding: 120px 0;
 }
-.ourteam .container{
+.ourteam .container {
   display: flex;
   width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
   flex-direction: column;
-  /* outline: 1px solid red; */
 }
 
 .ourteam-title {
-  font-family: "Roboto",sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  color:var(--navybluemodal);
-  margin-bottom: 72px; 
+  color: var(--navybluemodal);
+  margin-bottom: 72px;
 }
-.ourteam-list{
+.ourteam-list {
   list-style: none;
-  display: flex; 
+  display: flex;
   gap: 24px;
   padding: 0;
-  margin: 0; 
+  margin: 0;
 }
 
-.ourteam-list-item{
-  background-color:var(--white); 
+.ourteam-list-item {
+  background-color: var(--white);
   flex-basis: calc((100% - 3 * 24px) / 4);
   border-radius: 0px 0px 4px 4px;
 }
-.namestatus{
+.namestatus {
   padding: 32px 16px;
 }
 
-
 .ourteam-list-name {
-  font-family: "Roboto",sans-serif;
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color:var(--navybluemodal);
+  color: var(--navybluemodal);
   text-align: center;
   margin-bottom: 8px;
 }
 .ourteam-list-jobtitle {
-  font-family: "Roboto",sans-serif;
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color:var(--slate);
-  text-align: center; 
+  color: var(--slate);
+  text-align: center;
 }
 
-
 /** -------------FOOTER---------------- */
-.footer{
-  background:var(--navybluemodal);
+.footer {
+  background: var(--navybluemodal);
   padding: 100px 0;
 }
 
-.footer .container{
+.footer .container {
   display: flex;
   width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
   flex-direction: column;
-  /* outline: 1px solid red; */
 }
+
 .footer-logo {
-  font-family: "Raleway",sans-serif;
+  display: inline-block;
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--iris);
-  display: inline-block; 
   margin-bottom: 16px;
 }
 
 .footer-logo-studio {
-  color:var(--cloud);
+  color: var(--cloud);
 }
-.footer-text{
-  font-family: "Roboto",sans-serif;
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color:var(--cloud);
-max-width: 264px;
+.footer-text {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--cloud);
+  max-width: 264px;
 }
 
 /* *-----------Portfolio BTN---------- */
 
 .ourworks {
-  padding: 96px 0 120px; 
+  padding: 96px 0 120px;
 }
-.ourworks .container{
+.ourworks .container {
   display: flex;
   width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
-  /* outline: 1px solid red; */
+
   flex-direction: column;
-} 
+}
 
 .filter-list {
   display: flex;
@@ -365,23 +377,21 @@ max-width: 264px;
   margin-bottom: 72px;
 }
 .filter-btn {
-  font-family: "Roboto",sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   text-align: center;
   letter-spacing: 0.04em;
   cursor: pointer;
-  color:var(--iris);
-  background:var(--cloud);
+  color: var(--iris);
+  background: var(--cloud);
   padding: 12px 24px;
   border: 1px solid var(--cornflower);
   border-radius: 4px;
 }
 
 /* *------------Prtfolio Works IMG-h3-Text------------ */
-
-
 
 .works-list {
   display: flex;
@@ -390,19 +400,16 @@ max-width: 264px;
   row-gap: 48px;
   padding: 0;
   margin: 0;
-
 }
 
 .works-list-item {
-  width: calc((100% - 48px)/3);
-
+  width: calc((100% - 48px) / 3);
 }
-.workdiscript{
+.workdiscript {
   padding: 32px 16px;
   border: 1px solid var(--cornflower);
-  border-top: none; 
+  border-top: none;
   margin-bottom: 8px;
-
 }
 .work-list-link {
 }
@@ -413,17 +420,8 @@ max-width: 264px;
 }
 .works-list-text {
 }
-
-
-
-
-
-
-
-
-
 .works-list-title {
-  font-family: "Roboto",sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -431,24 +429,10 @@ max-width: 264px;
   color: var(--navybluemodal);
 }
 .works-list-text {
-  font-family: 'Roboto',sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color:var(--slate);
+  color: var(--slate);
 }
-
-
-/* .show-for-index {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border: 0;
-} */
-
