--- a/css/styles.css
+++ b/css/styles.css
@@ -344,6 +344,7 @@ body {
 
 .footer-logo-studio {
   color: var(--cloud);
+  display: inline-block;
 }
 .footer-text {
   font-family: "Roboto", sans-serif;
