--- a/css/styles.css
+++ b/css/styles.css
@@ -341,12 +341,12 @@ body {
   width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
-  flex-direction: column;
+  /* flex-direction: column; */
 }
 
 .footer-logo {
   display: inline-block;
-  width: 120px;
+  /* width: 120px; */
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
