--- a/css/styles.css
+++ b/css/styles.css
@@ -341,7 +341,7 @@ body {
   width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
-  /* flex-direction: column; */
+  flex-direction: column;
 }
 
 .footer-logo {
