--- a/css/styles.css
+++ b/css/styles.css
@@ -376,6 +376,19 @@ body {
 .ourworks {
   padding: 96px 0 120px;
 }
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .ourworks .container {
   display: flex;
   width: 1158px;
